--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -42,9 +42,6 @@
         }
     }
     .advantages{
-        &__header{
-            font-size: 28px;
-        }
         &__item{
             width: 180px;
             font-size: 13px;
@@ -54,6 +51,12 @@
             a{
                 font-size: 12px;
             }
+        }
+    }
+    .title{
+        font-size: 28px;
+        &_left{
+            font-size: 28px;
         }
     }
 }
@@ -79,6 +82,9 @@
         &_main {
             width: 150px;
         }
+        &_submit{
+            font-size: 7px;
+        }
     }
     .promo{
         min-height: 560px;
@@ -87,10 +93,10 @@
             align-items: center;
         }
         &__header{
-            font-size: 20px;
+            font-size: 14px;
         }
         &__subheader{
-            font-size: 12px;
+            font-size: 10px;
             margin-top: 0;
         }
         &__icons{
@@ -100,11 +106,14 @@
         &__icon{
             font-size: 12px;
         }
+        &__link{
+            font-size: 10px;
+            a{
+                font-size: 10px;
+            }
+        }
     }
     .advantages{
-        &__header{
-            font-size: 20px;
-        }
         &__wrapper{
             flex-direction: column;
             align-items: center;
@@ -122,6 +131,31 @@
             a{
                 font-size: 10px;
             }
+        }
+    }
+    .title{
+        font-size: 14px;
+        &_left{
+            font-size: 14px;
+            text-align: center;
+        }
+    }
+    .consultation{
+        min-height: 560px;
+        padding-top: 60px;
+        &__desc{
+            text-align: center;
+            font-size: 12px;
+            margin-top: 40px;
+        }
+    }
+    .feed-form{
+        width: 200px;
+        margin-left: 15px;
+        align-items: center;
+        input{
+            height: 40px;
+            font-size: 11px;
         }
     }
 }
