--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,4 +10,7 @@
 @import 'blocks/_header';
 @import 'blocks/buttons';
 @import 'blocks/advantages';
+@import 'blocks/consultation';
+@import 'blocks/titles';
+@import 'blocks/forms';
 @import 'media';
