--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -59,6 +59,23 @@
             font-size: 28px;
         }
     }
+    .carousel{
+        &__inner{
+            width: 600px;
+        }
+        .slick-slide{
+            img{
+                width: 600px;
+            }
+        }
+    }
+    .catalog{
+        &__tab{
+            div{
+                font-size: 14px;
+            }
+        }
+    }
 }
 @media (max-width: 575px) {
     .header{
@@ -84,6 +101,9 @@
         }
         &_submit{
             font-size: 7px;
+        }
+        &_mini{
+            width: 90px;
         }
     }
     .promo{
@@ -156,6 +176,89 @@
         input{
             height: 40px;
             font-size: 11px;
+        }
+    }
+    .carousel{
+        &__inner{
+            width: 320px;
+        }
+        .slick-slide{
+            img{
+                width: 320px;
+            }
+        }
+    }
+    .catalog{
+        &__content{
+            flex-direction: column;
+            align-content: center;
+        }
+        &__tabs{
+            margin-top: 50px;
+        }
+        &__tab{
+            width: 75px;
+            height: 25px;
+            div{
+                font-size: 8px;
+                line-height: 24px;
+            }
+        }
+        &-item{
+            width: 250px;
+            &__img{
+                height: 150px;
+            }
+            &__descr{
+                margin-top: 10px;
+                font-size: 12px;
+            }
+            &__link{
+                font-size: 12px;
+            }
+            &__subtitle{
+                font-size: 14px;
+            }
+            &__list{
+                li{
+                    font-size: 12px;
+                }
+            }
+            &__old-price{
+                font-size: 12px;
+            }
+            &__price{
+                font-size: 16px;
+            }
+
+        }
+    }
+    .feedback{
+        &__item{
+            flex-direction: column;
+            padding: 0 20px;
+            text-align: center;
+            margin-bottom: 50px;
+        }
+        &__img{
+            width: 100px;
+            height: 100px;
+            margin-right: 0;
+            display: block;
+            margin: 0 auto;
+        }
+        &__text{
+            text-align:left;
+            font-size: 12px;
+            margin-top: 10px;
+        }
+        &__title{
+            font-size: 14px;
+            margin-top: 10px;
+        }
+        &__subtitle{
+            font-size: 10px;
+            margin-top: 5px;
         }
     }
 }
