--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -21,4 +21,20 @@
         right: -66px;
         left: auto;
     }
+    .slick-dots{
+        display: flex;
+        list-style-type: none;
+        justify-content: center;
+        button{
+            border:none;
+            text-indent: -9999px;
+            border-radius: 100%;
+            width: 1rem;
+            height: 1rem;   
+            margin: 0 0.25rem;
+        }
+        li.slick-active button {
+			background-color: red;
+		}
+    }
 }
