--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -261,4 +261,16 @@
             margin-top: 5px;
         }
     }
+    .footer{
+        &__info{
+            width: 320px;
+            padding: 50px 35px 60px 35px;
+        }
+        &__addr{
+            font-size: 16px;
+        }
+        &__phone{
+            font-size: 16px;
+        }
+    }
 }
