--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -8,6 +8,11 @@
     font-size: 12px;
     font-weight: 500;
     text-transform: uppercase;
+    transition: 0.3s all;
+    &:hover{
+        box-shadow: 0px 0px 10px $main_color;
+        border: none;
+    }
     &_main{
         margin-top: 67px;
         width: 300px;
